--- a/holder/templates/master/base.html
+++ b/holder/templates/master/base.html
@@ -11,6 +11,8 @@
 
 </head>
 <body>
-    {% block content %} <h1>News for {{date|date:"l d-F Y"}}</h1> {%endblock%}
+    {% block content %}
+
+    {%endblock%}
 </body>
 </html>
