Added styling on the landing page

--- a/holder/templates/welcome.html
+++ b/holder/templates/welcome.html
@@ -3,5 +3,17 @@
 {% block content %}
 {{block.super}}
 
-<h1> Welcome to the Personal Gallery</h1>
+<div class="container">
+  <div class="row">
+    <br>
+    <br>
+    <div class="col-md-7">
+      <h1>Sasa</h1>
+    </div>
+    <div class="col-md-4">
+      <h1>Poa</h1>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
