--- a/holder/templates/master/base.html
+++ b/holder/templates/master/base.html
@@ -1,4 +1,6 @@
 {% load bootstrap3 %}
+{% load static%}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,9 +12,12 @@
     <title> Personal Gallery </title>
   {% endif %}
 
+
   {% block styles %}
-  {% bootstrap_css %}
+    {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/welcome.css' %}">
   {% endblock %}
+
 
 </head>
 <body>
