--- a/holder/templates/welcome.html
+++ b/holder/templates/welcome.html
@@ -1,19 +1,27 @@
 {%extends 'master/base.html'%}
+{% load static %}
 
 {% block content %}
 {{block.super}}
 
-<div class="container">
-  <div class="row">
-    <br>
-    <br>
-    <div class="col-md-7">
-      <h1>Sasa</h1>
-    </div>
-    <div class="col-md-4">
-      <h1>Poa</h1>
-    </div>
+<div class="Niaje">
+  <div class="caption">
+  <span class="border">Welcome to My Personal Gallery</span><br>
+  <br>
+  <span class="border">Francis T Karagu</span>
   </div>
 </div>
+
+<div class="gallery-summary">
+  <h3>The Gallery</h3>
+  <p><center>This platform provides both an individual the opportunity to show case their work / skills in photography</center></p>
+</div>
+
+<div class="Niaje">
+    <div class="caption">
+      <span class="border">THE GALLERY</span>
+    </div>
+  </div>
+
 
 {% endblock %}
