Added new post page

--- a/holder/templates/welcome.html
+++ b/holder/templates/welcome.html
@@ -6,22 +6,24 @@
 
 <div class="Niaje">
   <div class="caption">
-  <span class="border">Welcome to My Personal Gallery</span><br>
-  <br>
-  <span class="border">Francis T Karagu</span>
+    <span class="border">Welcome to My Personal Gallery</span><br>
+    <br>
+    <span class="border">Francis T Karagu</span>
   </div>
 </div>
 
 <div class="gallery-summary">
   <h3>The Gallery</h3>
-  <p><center>This platform provides both an individual the opportunity to show case their work / skills in photography</center></p>
+  <p>
+    <center>It's platform that provides an individual the opportunity to show case their work / skills in photography</center>
+  </p>
 </div>
 
 <div class="Niaje">
-    <div class="caption">
-      <span class="border">THE GALLERY</span>
-    </div>
+  <div class="caption">
+    <span class="border">THE GALLERY</span>
   </div>
+</div>
 
 
 {% endblock %}
