--- a/holder/templates/post.html
+++ b/holder/templates/post.html
@@ -3,5 +3,28 @@
 {% block content %}
 {{block.super}}
 
-<h1>POST</h1>
+<div class="container">
+
+  <!-- Looping through news   -->
+  {% for img_item in img %}
+
+  <div class="row">
+    <!-- displaying News articles -->
+    <div class="col-xs-6 col-sm-6 col-md-4 col-lg-6">
+      <h2 class="text-center"> {{ img_item.name }} </h2>
+    </div>
+    <div>
+      <img src="{{img_item.article_image.url}}" class="img-responsive" alt="Image">
+    </div>
+
+  </div>
+
+  {% empty %}
+  <div class="row">
+    <h2 class="text-center">There No Image Items</h2>
+  </div>
+  {% endfor %}
+
+</div>
+
 {% endblock %}
