--- a/holder/templates/navbar.html
+++ b/holder/templates/navbar.html
@@ -1,7 +1,13 @@
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand">Personal Gallery</a>
-      </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">Personal Gallery</a>
     </div>
-  </nav>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/post">Review</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
