Added font styling on the description

--- a/holder/static/css/welcome.css
+++ b/holder/static/css/welcome.css
@@ -1,6 +1,6 @@
-.xx{
-  height: 300px;
-  width: 300px;
+.fnt{
+  font-family: 'Boogaloo', cursive;
+  font-size: 18px;
 }
 .Niaje{
    position: relative;
