--- a/holder/templates/master/base.html
+++ b/holder/templates/master/base.html
@@ -15,6 +15,7 @@
 
   {% block styles %}
     {% bootstrap_css %}
+    <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/welcome.css' %}">
   {% endblock %}
 
