--- a/holder/templates/post.html
+++ b/holder/templates/post.html
@@ -12,7 +12,7 @@
     <div class="col-md-4">
       <div>
         <!-- modal button -->
-        <button type="button" class="btn" data-toggle="modal" data-target="#myModal{{img_item.id}}">
+        <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#myModal{{img_item.id}}">
           <img src="{{img_item.article_image.url}}" class="img-responsive" alt="Image" width="300" height="300">
           <p>
             <center>{{ img_item.name }}</center>
@@ -23,7 +23,7 @@
     </div>
 
     <div class="col-md-8">
-      <p>{{ img_item.description }}</p>
+      <p class="fnt">{{ img_item.description }}</p>
     </div>
   </div>
 
