--- a/holder/templates/post.html
+++ b/holder/templates/post.html
@@ -37,7 +37,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <center><img src="{{img_item.article_image.url }}" alt="" width="400" height="400"></center>
         <br>
-        <p class="modal-title">{{ img_item.description }}</p>
+        <p class="modal-title fnt">{{ img_item.description }}</p>
       </div>
     </div>
   </div>
