--- a/holder/templates/navbar.html
+++ b/holder/templates/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
+
     <div class="navbar-header">
       <a class="navbar-brand">Personal Gallery</a>
     </div>
@@ -9,5 +10,19 @@
         <li><a href="/post">Review</a></li>
       </ul>
     </div>
+
+    <!-- Adding a search form  -->
+    <div class="navbar-right">
+      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search Catergory" name="catergory">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <!-- search form end -->
+
   </div>
 </nav>
