--- a/holder/templates/navbar.html
+++ b/holder/templates/navbar.html
@@ -15,7 +15,7 @@
     <div class="navbar-right">
       <form class="navbar-form" role="search" action="{% url 'search_results' %}">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Catergory" name="catergory">
+          <input type="text" class="form-control" placeholder="search by category. Name has to be part of the image name" name="category">
           <div class="input-group-btn">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
