--- a/holder/templates/search.html
+++ b/holder/templates/search.html
@@ -1,4 +1,28 @@
 {%extends 'master/base.html'%}
-{% block content %}
 
+{% block content %}
+{{block.super}}
+
+<div class="container">
+
+  <div class="row">
+    {% if category%}
+      <h2>Found {{ category|length }} of searched term {{message}}</h2>
+    {% else %}
+      <h2> Found 0 category for the search term {{message}}</h2>
+    {% endif %}
+  </div>
+
+
+  <div class="row">
+  {% if category %}
+    {% for cat in category %}
+      <div class="col-md-4">
+      <img src="{{cat.article_image.url}}" class="img-responsive" alt="Image" width="300" height="300">
+      <p><center>{{ cat.name }}</center></p>
+      </div>
+    {% endfor %}
+  {% endif %}
+  </div>
+</div>
 {% endblock %}
