Modified category to make name unique

--- a/holder/templates/post.html
+++ b/holder/templates/post.html
@@ -38,6 +38,8 @@
         <center><img src="{{img_item.article_image.url }}" alt="" width="400" height="400"></center>
         <br>
         <p class="modal-title fnt">{{ img_item.description }}</p>
+        <br>
+        <center><p class="modal-title fnt">{{ img_item.pub_date }}</p></center>
       </div>
     </div>
   </div>
