--- a/holder/templates/navbar.html
+++ b/holder/templates/navbar.html
@@ -8,6 +8,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/post">Review</a></li>
+        <li><a href="/admin">DashBoard</a></li>
       </ul>
     </div>
 
