--- a/holder/templates/master/base.html
+++ b/holder/templates/master/base.html
@@ -3,34 +3,48 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
 
   {% if title %}
   <title>Personal Gallery - {{title}}</title>
   {% else %}
-    <title> Personal Gallery </title>
+  <title> Personal Gallery </title>
   {% endif %}
 
 
   {% block styles %}
-    {% bootstrap_css %}
-    <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/welcome.css' %}">
+  {% bootstrap_css %}
+
+  <link href="https://fonts.googleapis.com/css?family=Boogaloo" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/welcome.css' %}">
+  <link rel="stylesheet" href="{% static 'js/copy.js' %}">
   {% endblock %}
 
 
 </head>
+
 <body>
-    {% block content %}
-    {% include "navbar.html" %}
-    {%endblock%}
+  {% block content %}
+  {% include "navbar.html" %}
+  {%endblock%}
 
-    {% block scripts %}
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    {% bootstrap_javascript %}
+  {% block scripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    {%endblock%}
+  <script>
+    function copyUrl() {
+      var copyText = document.getElementById("{{img_item.id}}-url");
+      copyText.select();
+      document.execCommand("copy");
+      alert("Copied the text: " + copyText.value);
+    }
+  </script>
 
+  {% bootstrap_javascript %}
+
+  {%endblock%}
 </body>
+
 </html>
